--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "minhas-financas-app",
-  "version": "1.22.19",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootswatch": "^5.3.2",
+    "axios": "^1.6.7",
+    "bootswatch": "^5.2.2",
+    "classnames": "^2.5.1",
+    "currency-formatter": "^1.5.9",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.6.2",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-router-dom": "5.1.2",
+    "react-router-dom": "^6.22.2",
     "react-scripts": "3.1.2",
+    "react-transition-group": "^4.4.5",
+    "toastr": "^2.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
